--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -24,11 +24,11 @@ p {
 }
 
 .site-heading {
-  margin-top: 5rem;
-  margin-bottom: 5rem;
+  margin: 5rem auto;
   text-transform: uppercase;
   line-height: 1;
   font-family: 'Raleway';
+  width: 75%;
 }
 
 .site-heading .site-heading-upper {
@@ -237,6 +237,12 @@ section h1 {
   max-width: 75%;
   margin: 0 auto;
 }
+.img1 {
+  border-radius: 0.5rem;
+  height: auto;
+  margin: 20px auto 0;
+  width: 100%;
+}
 #section1 .container,
 #section2 .container,
 #section3 .container,
@@ -261,22 +267,7 @@ section h1 {
   right: -0.5rem;
   border: 0.25rem solid rgba(255, 255, 255, 0.85);
 }
-#section1 .row img {
-  border-radius: 10px;
-  height: auto;
-  margin: 20px auto;
-  width: 75%;
-}
-#section2 .row img {
-  border-radius: 10px;
-  float: right;
-  margin: 0 0 0 30px;
-}
-#section3 .row img {
-  border-radius: 10px;
-  float: left;
-  margin: 0 30px 0 0;
-}
+
 #section2 .container,
 #section4 .container {
   background: rgba(230,167,86,0.7);
@@ -284,6 +275,39 @@ section h1 {
 #section2 .container:before,
 #section4 .container:before {
   border: 0.25rem solid rgba(230,167,86,0.7);
+}
+#section1 .row.one img {
+  border-radius: 0.5rem;
+  margin: 20px auto;
+}
+#section1 .row.two p {
+  text-align: center;
+}
+#section2 .row {
+  margin-top: 20px;
+}
+#section2 .row .col-sm.one {
+  text-align: right;
+}
+#section2 .row .col-sm img {
+  border-radius: 0.5rem;
+}
+#section2 .row .col {
+
+}
+#section3 .row,
+#section4 .row {
+  margin-top: 20px;
+  padding: 0 20px;
+}
+#section3 .row .col.one,
+#section4 .row .col.one {
+  margin-top: 15px;
+}
+#section3 .row .col img,
+#section4 .row .col img {
+  border-radius: 1rem;
+  width: 100%;
 }
 .container h1 {
   text-align: center;
