--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -341,3 +341,11 @@ section h1 {
   color: #fff;
   text-decoration: none;
 }
+.custom-email-validation-error {
+  color: red;
+  font-weight: bold;
+  display: none;
+}
+.custom-email-validation-error.show-error {
+  display: block;
+}
